--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
     "jest": "^27.0.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.1.1",
     "vue-jest": "^3.0.4"
   }
 }
