--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.15.1",
+    "@nuxtjs/google-gtag": "^1.0.4",
+    "core-js": "^3.20.0",
     "nuxt": "^2.15.7",
     "vue-parallax-js": "^0.2.3",
     "vue-typer": "^1.2.0",
-    "vuetify": "^2.5.5"
+    "vuetify": "^2.6.1"
   },
   "devDependencies": {
-    "@nuxtjs/vuetify": "^1.12.1",
-    "@vue/test-utils": "^1.2.1",
+    "@nuxtjs/vuetify": "^1.12.3",
+    "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.0.5",
-    "jest": "^27.0.5",
+    "babel-jest": "^27.4.5",
+    "jest": "^27.4.5",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^10.2.0",
     "vue-jest": "^3.0.4"
   }
 }
