--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.5",
     "jest": "^27.4.5",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.0",
+    "nth-check": ">=2.0.1",
     "sass-loader": "^10.2.0",
+    "trim-newlines": ">=3.0.1",
+    "glob-parent": " >=5.1.2",
     "vue-jest": "^3.0.4"
   }
 }
