--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-gtag": "^1.0.4",
     "core-js": "^3.20.0",
     "nuxt": "^2.15.7",
     "vue-parallax-js": "^0.2.3",
@@ -19,16 +18,17 @@
     "vuetify": "^2.6.1"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.5",
+    "glob-parent": " >=5.1.2",
     "jest": "^27.4.5",
     "node-sass": "^7.0.0",
     "nth-check": ">=2.0.1",
     "sass-loader": "^10.2.0",
     "trim-newlines": ">=3.0.1",
-    "glob-parent": " >=5.1.2",
     "vue-jest": "^3.0.4"
   }
 }
