--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.20.0",
+    "core-js": "^3.20.3",
+    "follow-redirects": ">=1.14.7",
     "nuxt": "^2.15.7",
     "vue-parallax-js": "^0.2.3",
     "vue-typer": "^1.2.0",
-    "vuetify": "^2.6.1"
+    "vuetify": "^2.6.2"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.4.5",
-    "glob-parent": " >=5.1.2",
-    "jest": "^27.4.5",
-    "node-sass": "^7.0.0",
+    "babel-jest": "^27.4.6",
+    "glob-parent": "^6.0.2",
+    "jest": "^27.4.7",
+    "node-sass": "^7.0.1",
     "nth-check": ">=2.0.1",
-    "sass-loader": "^10.2.0",
+    "sass-loader": "^10.2.1",
     "trim-newlines": ">=3.0.1",
     "vue-jest": "^3.0.4"
   }
