--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/google-gtag": "^1.0.4",
     "core-js": "^3.20.3",
-    "follow-redirects": ">=1.14.7",
+    "follow-redirects": "^1.14.9",
     "nuxt": "^2.15.7",
     "vue-parallax-js": "^0.2.3",
     "vue-typer": "^1.2.0",
     "vuetify": "^2.6.2"
   },
   "devDependencies": {
-    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
