--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuetify": "^2.6.2"
   },
   "devDependencies": {
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/vuetify": "^1.12.3",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
