--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nth-check": ">=2.0.1",
     "sass-loader": "^10.2.1",
     "trim-newlines": ">=3.0.1",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "minimatch": " >=3.0.5 "
   }
 }
